# HuxQt

./: .gitignore  CMakeLists.txt  CMakePresets.json  HuxQt.sln  Readme.txt  readme.md
HuxQt/: AppCore.cpp  AppCore.h  CMakeLists.txt  HuxQt.pri  HuxQt.pro  HuxQt.vcxproj  HuxQt.vcxproj.filters  main.cpp  resource.h
HuxQt/Scenario/: CMakeLists.txt  Level.cpp  Level.h  Scenario.cpp  Scenario.h  ScenarioBrowserModel.cpp  ScenarioBrowserModel.h  ScenarioManager.cpp  ScenarioManager.h  Terminal.cpp  Terminal.h
HuxQt/UI/: BrowsePictDialog.cpp  CMakeLists.txt  DisplayData.h  DisplaySystem.cpp  DisplaySystem.h  EditLevelDialog.cpp  EditTextColorDialog.cpp  EditTextColorDialog.h  ExportScenarioDialog.cpp  HuxQt.cpp  HuxQt.h  PreviewConfigWindow.cpp  ScenarioBrowserView.cpp  ScenarioBrowserWidget.cpp  ScenarioBrowserWidget.h  ScreenEditWidget.cpp  ScreenEditWidget.h  TeleportEditWidget.cpp  TeleportEditWidget.h  TerminalEditorWindow.cpp  TerminalEditorWindow.h
HuxQt/Utils/: CMakeLists.txt  Color.h  Utilities.h
HuxQt/forms/: EditLevelDialog.ui  EditTextColorDialog.ui  ExportScenarioDialog.ui  HuxQt.ui  TeleportEditWidget.ui  TerminalEditorWindow.ui
HuxQt/resources/: CMakeLists.txt
HuxQt/src/forms/: AddLevelDialog.ui  BrowsePictDialog.ui  ExportScenarioDialog.ui  HuxQt.ui  PreviewConfigWindow.ui  ScreenEditTab.ui  ScreenEditWidget.ui  ScreenEditorWindow.ui  TerminalEditDialog.ui  TerminalEditorWindow.ui
HuxQt/src/include/: AppCore.h  stdafx.h
HuxQt/src/resources/: HuxQt.qrc  HuxQt.rc
HuxQt/src/source/: AppCore.cpp  main.cpp
readme/: english.md  spanish.md
(+43 files in other folders)
